--- a/habitaciones.html
+++ b/habitaciones.html
@@ -28,19 +28,18 @@
     <center>
         <h3>Disfruta de nuestras instalaciones!</h3>
     </center>
-    <div class="carousel">
-        <a class="carousel-item" href="#one!"><img src="./img/matri-delux.jpeg"></a>
-        <a class="carousel-item" href="#two!"><img src="./img/suit-doble.jpeg"></a>
-        <a class="carousel-item" href="#three!"><img src="./img/villa.jpeg"></a>
-    </div>
-    <script>
-     document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.carousel');
-    var instances = M.Carousel.init(elems, options);
-    var instance = M.Carousel.getInstance(elem);
-  });
-    </script>
+    <center>
+        <div class="carousel">
+            <a class="carousel-item" href="#one!"><img src="./img/matri-delux.jpeg"></a>
+            <a class="carousel-item" href="#two!"><img src="./img/suit-doble.jpeg"></a>
+            <a class="carousel-item" href="#three!"><img src="./img/villa.jpeg"></a>
+        </div>
+    </center>
+ 
+    
 
 </body>
 
+
 </html>
+
