--- a/habitaciones.html
+++ b/habitaciones.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <link rel="stylesheet" href="estilo.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="carousel.js"></script>
     <script type="text/javascript" src="card.js"></script>
 
@@ -196,6 +197,18 @@
     </center>
 
     </div>
+
+    <footer class="page-footer brown darken-1">
+        <div class="container">
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2022 tamagochita                    
+                </div>
+                <a id="linksito" href="https://www.linkedin.com/in/mary-rojas-03a1801a6/"><i class="material-icons">mail</i></a>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
