--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -25,8 +26,11 @@
         </div>
     </nav>
     <center>
-        <h5>Ven a disfrutar de nuestras instalaciones!</h5>
+        <h5>Bienvenido a hotel aqui me quedo!</h5>
+        
     <img src="./img/hompage.jpeg" alt="sdfds" style="border:solid ;  ">
+    <a id="linksito" href="habitaciones.html"><i class="material-icons">arrow_forward</i></a>
+
 
     </center>
 
