corregir inicio sesion

--- a/iniciar.html
+++ b/iniciar.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <div>
-        <h5 class="center-align">Registrate!</h5>
+        <h5 class="center-align">Inicia sesion</h5>
     </div>
 
     <center>
